# WeKit-archive

./: .gitmodules  AGENTS.md  README.md
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/java/dev/ujhhgtg/wekit/activity/: MainActivity.kt  RootTelegramStickerSetPicker.kt  StandardActivity.kt  TelegramDatabaseImportContract.kt  TransparentActivity.kt
app/src/main/java/dev/ujhhgtg/wekit/constants/: Preferences.kt
app/src/main/java/dev/ujhhgtg/wekit/preferences/: WePrefs.kt
app/src/main/java/dev/ujhhgtg/wekit/utils/: AppUpdater.kt  AudioUtils.kt  ByteArrayUtils.kt  MediaFileTypeDetector.kt  NullUtils.kt  (+4 more)
app/src/main/java/nuke/data/cipher/: NativeCrypto.kt
app/src/main/res/values/: strings.xml
app/src/main/rust/wekit-native/: Cargo.toml  build.rs
app/src/main/rust/wekit-native/include/: wekit_vpx_decoder.c
app/src/main/rust/wekit-native/src/: audio_utils.rs  crash_handler.rs  crash_triggerer.rs  lib.rs  native_hook.rs  telegram_sticker.rs
contrib/wekit-read-receipts-server/: Cargo.toml  index.html
contrib/wekit-read-receipts-server/src/: main.rs
docs/: README.md  SUMMARY.md  bug-report-guide.md  configuration.md  development.md  faq.md  getting-started.md  installation.md  module-settings.md  zygisk.md
gradle/: libs.versions.toml
wekit-zygisk/: .gitignore  README.md  project-config.json
wekit-zygisk/native/: CMakeLists.txt  art_hook.cpp  art_hook.h  main.cpp  so_hider.cpp  so_hider.h
wekit-zygisk/template/: action.sh  config.sh  customize.sh  module.prop  uninstall.sh
wekit-zygisk/template/webroot/: index.html
wekit-zygisk/template/webroot/css/: app.css
wekit-zygisk/template/webroot/js/: app.js  bridge.js  kernelsu.js
xtask/: Cargo.toml
xtask/src/: main.rs
(+145 files in other folders)
